# retrieve_data

./: .gitignore  README.md  run.sh
insight_testsuite/: results.txt
insight_testsuite/temp/output/: medianvals_by_date.txt  medianvals_by_zip.txt
insight_testsuite/temp/src/: find_political_donors.py
insight_testsuite/temp/src/donation_analysis/: calc_median.py  process_input_line.py
insight_testsuite/tests/test_2/input/: itcont.txt
insight_testsuite/tests/test_2/output/: medianvals_by_date.txt  medianvals_by_zip.txt
insight_testsuite/tests/test_2015_10k_entries/input/: itcont.txt
insight_testsuite/tests/test_2015_10k_entries/output/: medianvals_by_date.txt  medianvals_by_zip.txt
insight_testsuite/tests/test_missing_zip_or_date/input/: itcont.txt
insight_testsuite/tests/test_missing_zip_or_date/output/: medianvals_by_zip.txt
insight_testsuite/tests/test_py_impl/: context.py  mytests.py  test_checkers.py  test_running_median.py  test_single_entry.py
insight_testsuite/tests/test_py_impl/input/: itcont.txt
insight_testsuite/tests/test_simulated_1/input/: itcont.txt
insight_testsuite/tests/test_simulated_1/output/: medianvals_by_date.txt  medianvals_by_zip.txt
insight_testsuite/tests/test_simulated_2/input/: itcont.txt
insight_testsuite/tests/test_simulated_2/output/: medianvals_by_date.txt  medianvals_by_zip.txt
output/: medianvals_by_date.txt  medianvals_by_zip.txt  show_diff_lines.py
src/: README.md  find_political_donors.py
src/donation_analysis/: __init__.py  calc_median.py  process_input_line.py
src/donation_analysis_cpp/: CMakeLists.txt  donation_analysis-config.cmake  main.cpp
src/donation_analysis_cpp/include/: CMakeLists.txt  MedianInterface.h  MedianRunning.h  MedianStatic.h  Record.h  Tracker.h  TrackerDate.h  TrackerInterface.h  TrackerZip.h  donation_analysis.h
src/donation_analysis_cpp/src/: CMakeLists.txt  MedianRunning.cpp  MedianStatic.cpp  Record.cpp  TrackerDate.cpp  TrackerZip.cpp
src/src_py3/campaign_analysis/: __init__.py  process_input_line.py
src/src_py3/tests/: env.py  mytests.py
src/unittest_cpp/: CMakeLists.txt  CMakeLists.txt.in  testMedian.cpp  testRecord.cpp  testTracker.cpp
src/unittest_py3/: context.py  test_checkers.py  test_running_median.py  test_single_entry.py  test_static_median.py
